<resources>
    <string name="app_name">Dataholics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="data">Data</string>
    <string name="piechart">Export</string>
    <string name="histogram">Export</string>
    <string name="table">Export</string>
    <string name="trends">Export</string>
    <string name="sleep">Sleep</string>
    <string name="export">Export</string>
</resources>
