<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dataholics.ui.profile.ProfileFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.example.dataholics.ui.data.DataFragment"
        android:label="data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.dataholics.ui.settings.SettingsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.dataholics.ui.calendar.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.dataholics.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_export"
        android:name="com.example.dataholics.ui.export.ExportFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_export" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.dataholics.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>